--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- nav bar -->
   <nav class="navbar navbar-expand-lg fixed-top">
-    <img id="logo" src="images/tree.png" width="2.5%">
+    <img id="logo" src="images/tree.png" width="30px;">
     <a class="navbar-brand" href="index.html">My Plantoo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
